test/mutation_analysis/s0942_di_string_match/hafis/o3/mutants/6/result.txt
./test/mutation_analysis/s0942_di_string_match/hafis/o3/mutants/6/Solution.java:20: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
